[package]
name = "read-rust"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
autobins = false

[[bin]]
name = "readrust"
path = "src/main.rs"

[dependencies]
atom_syndication = "0"
chrono = { version = "0", features = ['serde'] }
diesel = { version = "1.0", features = ["postgres", "chrono"] }
dotenv = "0.14.1"
egg-mode = { version = "0", default-features = false, features = ["hyper-rustls"] }
env_logger = "0.6.2"
failure = "0"
failure_derive = "0"
feedfinder = { git = "https://github.com/wezm/feedfinder.git", branch = "bump-dependencies" }
getopts = "0"
kuchiki = "0"
log = "0.4.0"
mammut = "0"
opengraph = "0"
reqwest = "0"
rss = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0"
url = "1.7"
url_serde = "0"
uuid = { version = "0", features = ['v4', 'serde'] }
