[package]
name = "read-rust"
version = "2.0.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
chrono = { version = "0", features = ['serde'] }
diesel = { version = "1.0", features = ["postgres", "chrono", "uuidv07"] }
dotenv = "0.14.1"
egg-mode = { version = "0", default-features = false, features = ["hyper-rustls"] }
env_logger = "0.6.2"
getopts = "0"
log = "0.4.0"
elefren = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0"
url = "1.7"
uuid = { version = "0.7.0", features = ['v4', 'serde'] } # version needs to match diesel
