[package]
name = "read-rust"
version = "2.0.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
chrono = { version = "0", features = ['serde'] }
diesel = { version = "=1.4.3", features = ["postgres", "chrono", "uuidv07"] }
dotenv = "0"
egg-mode = { version = "0", default-features = false, features = ["hyper-rustls"], optional = true }
env_logger = "0"
getopts = "0"
log = "0"
elefren = { version = "0.21.0", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0"
tokio = "0.1"
url = "2.0"
uuid = { version = "0.7.0", features = ['v4', 'serde'] } # version needs to match diesel

[features]
twitter = ["egg-mode"]